# CS236-Project1

./: AddAutomaton.cpp  AddAutomaton.h  Automaton.h  BlockCommentAutomaton.cpp  BlockCommentAutomaton.h  CMakeLists.txt  CharUndefinedAutomaton.cpp  CharUndefinedAutomaton.h  ColonAutomaton.cpp  ColonAutomaton.h  ColonDashAutomaton.cpp  ColonDashAutomaton.h  CommaAutomaton.cpp  CommaAutomaton.h  EOFAutomaton.cpp  EOFAutomaton.h  EmptyStringAutomaton.cpp  EmptyStringAutomaton.h  FactsAutomaton.cpp  FactsAutomaton.h  IDAutomaton.cpp  IDAutomaton.h  LeftParenthesisAutomaton.cpp  LeftParenthesisAutomaton.h  Lexer.cpp  Lexer.h  LineCommentAutomaton.cpp  LineCommentAutomaton.h  MultiplyAutomaton.cpp  MultiplyAutomaton.h  PeriodAutomaton.cpp  PeriodAutomaton.h  QueriesAutomaton.cpp  QueriesAutomaton.h  QuestionMarkAutomaton.cpp  QuestionMarkAutomaton.h  RightParenthesisAutomaton.cpp  RightParenthesisAutomaton.h  RulesAutomaton.cpp  RulesAutomaton.h  (+9 more)
